pushing to GitHub

--- a/Java II/bin/.gitignore
+++ b/Java II/bin/.gitignore
@@ -1,5 +1,9 @@
-/spaceInvaders/
+/.DS_Store
+/Pokemon Game.zip
+/Pokemon Game/
 /classwork/
-/homework/
-/geometryDash/
 /codewars/
+/geometryDash/
+/homework/
+/pokemon/
+/spaceInvaders/
